spl2/hn_tests/failing/euler6-2.hn
hnMain = {
	natr f = {
		g x total = 1
		natrec g 0 100
	}
	id x = x
	print (sub (natr id) (natr id))
}